add mobile card layout for small screens

--- a/index.html
+++ b/index.html
@@ -50,6 +50,31 @@
     .img-preview { max-width: 100%; max-height: 120px; border-radius: 6px; margin-top: .3rem; }
     .img-modal-overlay { position: fixed; inset: 0; background: rgba(0,0,0,.7); display: flex; align-items: center; justify-content: center; z-index: 200; cursor: pointer; }
     .img-modal-overlay img { max-width: 90%; max-height: 90%; border-radius: 8px; }
+
+    /* Mobile card layout */
+    .cards { display: none; }
+    @media (max-width: 640px) {
+      body { padding: .75rem; }
+      h1 { font-size: 1.3rem; }
+      .toolbar { gap: .35rem; }
+      .toolbar button, .toolbar select { padding: .4rem .6rem; font-size: .8rem; }
+      .table-wrap { display: none; }
+      .cards { display: flex; flex-direction: column; gap: .75rem; }
+      .card {
+        background: #fff; border-radius: 10px; padding: .85rem;
+        box-shadow: 0 1px 4px rgba(0,0,0,.08); display: flex; gap: .75rem;
+      }
+      .card-img { width: 64px; height: 64px; object-fit: cover; border-radius: 8px; flex-shrink: 0; cursor: pointer; }
+      .card-img-placeholder { width: 64px; height: 64px; border-radius: 8px; background: #eee; display: flex; align-items: center; justify-content: center; color: #bbb; font-size: 1.4rem; flex-shrink: 0; }
+      .card-body { flex: 1; min-width: 0; }
+      .card-name { font-weight: 600; font-size: .95rem; color: #3a5a28; }
+      .card-meta { font-size: .78rem; color: #666; margin-top: .2rem; line-height: 1.4; }
+      .card-actions { display: flex; gap: .3rem; margin-top: .4rem; }
+      .card-actions button { background: none; border: 1px solid #ddd; border-radius: 6px; padding: .25rem .5rem; cursor: pointer; font-size: .85rem; }
+      .card-actions button:hover { background: #f0f0f0; }
+      .modal { padding: 1.1rem; width: 98%; }
+      .modal h2 { font-size: 1.05rem; }
+    }
   </style>
 </head>
 <body>
@@ -77,7 +102,7 @@
   <table>
     <thead>
       <tr>
-        <th>Photo</th><th></th>Name</th><th>Category</th><th>Forage Season</th>
+        <th>Photo</th><th>Name</th><th>Category</th><th>Forage Season</th>
         <th>Forage Window</th><th>Use-By Window</th><th>Status</th>
         <th>Notes</th><th>Actions</th>
       </tr>
@@ -85,6 +110,7 @@
     <tbody id="tableBody"></tbody>
   </table>
 </div>
+<div class="cards" id="cardContainer"></div>
 
 <!-- Add / Edit Modal -->
 <div class="modal-overlay hidden" id="modalOverlay" role="dialog" aria-modal="true">
@@ -151,6 +177,7 @@ function renderTable() {
 
   if (!filtered.length) {
     tbody.innerHTML = `<tr><td colspan="9" class="empty-state">${items.length ? 'No items match this filter.' : 'No items yet — click "+ Add Item" to start tracking.'}</td></tr>`;
+    document.getElementById('cardContainer').innerHTML = `<div class="empty-state">${items.length ? 'No items match this filter.' : 'No items yet — tap "+ Add Item" to start tracking.'}</div>`;
     return;
   }
 
@@ -171,6 +198,32 @@ function renderTable() {
         <button onclick="addToGCal('${item.id}')" title="Add to Google Calendar" aria-label="Add ${esc(item.name)} to Google Calendar">📅</button>
       </td>
     </tr>`;
+  }).join('');
+
+  // Render mobile cards
+  const cardContainer = document.getElementById('cardContainer');
+  cardContainer.innerHTML = filtered.map(item => {
+    const status = getStatus(item);
+    const imgHtml = item.image
+      ? `<img src="${item.image}" class="card-img" alt="${esc(item.name)}" onclick="viewImage('${item.id}')">`
+      : `<div class="card-img-placeholder">🌿</div>`;
+    return `<div class="card">
+      ${imgHtml}
+      <div class="card-body">
+        <div class="card-name">${esc(item.name)} ${statusBadge(status)}</div>
+        <div class="card-meta">
+          ${esc(item.category)} · ${esc(item.season)}<br>
+          📅 ${item.forageStart} → ${item.forageEnd}<br>
+          ⏳ Use within ${item.useByDays} days
+          ${item.notes ? `<br>📝 ${esc(item.notes)}` : ''}
+        </div>
+        <div class="card-actions">
+          <button onclick="editItem('${item.id}')" aria-label="Edit ${esc(item.name)}">✏️</button>
+          <button onclick="deleteItem('${item.id}')" aria-label="Delete ${esc(item.name)}">🗑️</button>
+          <button onclick="addToGCal('${item.id}')" aria-label="Add to calendar">📅</button>
+        </div>
+      </div>
+    </div>`;
   }).join('');
 }
 
